--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -23,7 +23,7 @@
                     <label for="{{ field.id_for_label }}" class="block text-sm font-medium text-gray-700">{{ field.label }}</label>
                     <div class="relative">
                         {{ field }}
-                        {% if field.name == 'password' or field.name == 'password2' %}
+                        {% if field.name == 'password1' or field.name == 'password2' %}
                         <button type="button" class="absolute inset-y-0 right-0 pr-3 flex items-center text-sm leading-5" onclick="togglePasswordVisibility('{{ field.id_for_label }}', this)">
                             <svg class="h-6 w-6 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
